force-app/main/default/objects/Curriculum__c/Curriculum__c.object-meta.xml
<CustomObject>
    <description>Curriculum data to create mock up testing data for the InfoJobs hackathon</description>
    <label>Curriculum</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Curriculum Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Curriculums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>