force-app/main/default/objects/Curriculum__c/fields/CVText__c.field-meta.xml
<CustomField>
    <fullName>CVText__c</fullName>
    <label>CVText</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>