force-app/main/default/objects/Curriculum__c/fields/Surname1__c.field-meta.xml
<CustomField>
    <fullName>Surname1__c</fullName>
    <label>Surname1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>