force-app/main/default/objects/Curriculum__c/fields/Surname2__c.field-meta.xml
<CustomField>
    <fullName>Surname2__c</fullName>
    <label>Surname2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>